--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -84,6 +84,12 @@ jobs:
       - name: Build image
         run: |
           docker build . --file Dockerfile --tag "${IMAGE_NAME}" --label "runnumber=${GITHUB_RUN_ID}"
+      - name: Build and push
+        uses: docker/build-push-action@v3
+        with:
+          push: true
+          tags: registry.heroku.com/experts-formula/web
+          provenance: false
 
       - name: Log in to registry
         uses: docker/login-action@v3
